# rust-hateoas

./: Cargo.toml
bruno/: Get.bru  bruno.json
src/: main.rs
