[package]
name = "rust_hateos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
